--- a/price.html
+++ b/price.html
@@ -12,7 +12,7 @@
 		<div class="row">
 			<div class="col">
             	<div id="logo">
-				<a href="index.html"><img src="images/logo.png"></a>
+				<a href="index.html"><img src="images/logo.png" alt="logo"></a>
 			</div>
 			</div>
 			<!-- <div class="col">
@@ -46,7 +46,7 @@
 				<div class="row">
 					<div class="col">
 					<div class="price">
-             			<p><legend>Price</legend></p>
+             			<h2>Price</h2>
 						<table style="width:100%">
   							<tr>
                             	<th>Standard</th>
